add board elements

--- a/app/src/components/Header/styles.css
+++ b/app/src/components/Header/styles.css
@@ -15,8 +15,8 @@
 }
 
 .header .menu .title{
-    font-size: 24pt;
-    font-weight: bold;
+    font-size: 28pt;
+    font-weight: bolder;
 }
 
 .header .gamemode{
