--- a/app/src/pages/Match/styles.css
+++ b/app/src/pages/Match/styles.css
@@ -1,7 +1,10 @@
-.page{
+.page {
     width: 100%;
     min-height: 100vh;
-    background-color: #D9DBD4;
+    padding: 32px 0px;
+    background-color: #d9dbd4;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    gap: 42px;
+    flex-direction: column;
 }
