--- a/app/src/components/Loading/styles.css
+++ b/app/src/components/Loading/styles.css
@@ -1,10 +1,9 @@
 .loading {
     display: flex;
     align-items: center;
-    flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    padding: 32px;
     gap: 8px;
 }
 
